# om2

./: .buildinfo  .gitignore  _config.yml  _toc.yml  genindex.html  main.py  myst.yml  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
ae/: ae-1-scraping-quotes.html  ae-2-twitter-api.html  exam-mini-clustering-solution.html  exam-mini-clustering-solution.ipynb  exam-mini-clustering.html  exam-mini-clustering.ipynb  exam-mini-response-solution.html  exam-mini-response-solution.ipynb  exam-mini-response.html  exam-mini-response.ipynb  exam-mini-test-drive-solution.html  exam-mini-test-drive-solution.ipynb  exam-mini-test-drive.html  exam-mini-test-drive.ipynb  exams.html
code/: 3-pandas-intro-short-c.html  3-pandas-intro-short-c.ipynb  32-tf-example.html  33-fashion-mnist.html  altair_introduction_p.html  bar-chart-altair.html  code-overview.html  contingency-table-bar-plot.html  pie-charts-altair.html  row-column-proportions.html  shell-data.html  standardized-bar-chart-altair.html
docs/: .course-overview.md.bak  code-overview.html  code-overview.md  course-faq.html  course-overview.html  course-overview.md  course-schedule.html  course-schedule.md  course-support.html  course-syllabus.html  course-syllabus.md  huggingface.html  huggingface.md
tutorials/: env-webscraping.html
weeks/: week1.html  week1.md  week10.html  week10.md  week11.html  week11.md  week12.html  week12.md  week13.html  week13.md  week14.html  week14.md  week15.html  week2-old.html  week2.html  week2.md  week3.html  week3.md  week4.html  week4.md  week5.html  week5.md  (+8 more)
(+24 files in other folders)
